# sonar-scanner-python

./: .cirrus.yml  .gitignore  CLI_ARGS.md  CONTRIBUTING.md  DRY_RUN_MODE.md  README.md  license_header.tmpl  main.py  mise.toml  pyproject.toml  requirements.txt  sonar-project.properties  wss-unified-agent.config
.cirrus/: analysis.sh  poetry.Dockerfile  run_iris.sh  run_its.sh  run_macos_tests.sh
.github/: CODEOWNERS  renovate.json
.github/actions/config-poetry/: action.yml  config-poetry.sh
.github/actions/config-poetry-win/: action.yml
.github/scripts/: config-poetry.sh  run_its.sh
.github/workflows/: Iris.yml  MacOsBuild.yml  MacOsNightly.yml  PrCleanup.yml  PullRequestClosed.yml  PullRequestCreated.yml  RequestReview.yml  SlackNotify.yml  SubmitReview.yml  build-pr.yml  build.yml  prerelease.yml  releasability.yml  release.yml  test-release.yml
its/: .gitignore  README.md  compose.yaml  pyproject.toml
its/sources/minimal/: pyproject.toml  sonar-project.properties
its/sources/minimal/src/: minimal.py
its/tests/: conftest.py  test_analysis.py  test_dummy.py  test_minimal.py
its/utils/: cli_client.py  sonarqube_client.py
scripts/: format.sh  generate_licenseheaders.sh  run_its.sh
src/cli/: __main__.py  configuration_properties_config.py  context.py  environment_config.py  main.py  postprocessor.py  scanner.py
src/py_sonar_scanner/: __about__.py  __init__.py  __main__.py  configuration.py  environment.py  logger.py  scanner.py
src/py_sonar_scanner/utils/: binaries_utils.py
src/py_sonar_scanner_DAVID_K/: configuration_properties_config.py  context.py  environment_config.py  main.py  scanner.py
src/pysonar/: __main__.py  configuration.py  environment.py  scanner.py
src/pysonar_scanner/: __main__.py  api.py  app_logging.py  cache.py  configuration.py  dry_run_reporter.py  environment.py  exceptions.py  jre.py  logger.py  scanner.py  scannerengine.py  utils.py
src/pysonar_scanner/configuration/: __init__.py  cli.py  configuration_loader.py  coveragerc_loader.py  dynamic_defaults_loader.py  environment_variables.py  properties.py  properties_file.py  pyproject_toml.py  python_project_loader.py  sonar_project_properties.py  test_paths_loader.py  toml_file.py
src/pysonar_scanner/jre/: provisioner.py  resolved_path.py  resolver.py
tests/: __init__.py  conftest.py  sq_api_utils.py  test_api.py  test_cache.py  test_configuration.py  test_configuration_cli.py  test_configuration_loader.py  test_dummy.py  test_environment.py  test_environment_variables.py  test_jre.py  test_main.py  test_placeholder.py  test_properties.py  test_properties_file.py  test_pyproject_toml.py  test_scanner.py  test_scannerengine.py  test_sonar_project_properties.py  test_toml_file.py  test_utils.py
tests/helpers/: __init__.py  fs_helpers.py
tests/its/: __main__.py  compose.yaml  conftest.py  test_auto_detect_tests.py  test_minimal.py
tests/its/sources/minimal/: pyproject.toml  sonar-project.properties
tests/its/sources/minimal/src/: minimal.py
tests/its/sources/with-tests/: pyproject.toml  sonar-project.properties
tests/its/sources/with-tests/src/: app.py
tests/its/sources/with-tests/tests/: test_app.py
tests/its/utils/: cli_client.py  pysonar-debug.py  pysonar-scanner-debug.py  sonarqube_client.py
tests/jre/: test_provisioner.py  test_resolved_path.py  test_resolver.py
tests/resources/: pyproject.toml  test_toml_file.toml  test_toml_file_poetry.toml  toml_no_common_properties.toml
tests/unit/: sq_api_utils.py  test_api.py  test_app_logging.py  test_cache.py  test_configuration_cli.py  test_configuration_loader.py  test_coveragerc_loader.py  test_dry_run.py  test_exceptions.py  test_jre.py  test_main.py  test_pyproject_toml.py  test_python_project_loader.py  test_scannerengine.py  test_sonar_project_properties.py  test_test_paths_loader.py  test_utils.py
tools/: generate_cli_documentation.py
