[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']

[project]
authors = [{ name="[Code Quality] Data & ML Squad", email="quality.data-ml@sonarsource.com" }]
classifiers = ['Environment :: Console', 'Intended Audience :: Developers', 'Operating System :: OS Independent', 'Programming Language :: Python', 'Programming Language :: Python :: 3', 'Programming Language :: Python :: 3 :: Only', 'Programming Language :: Python :: 3.9', 'Programming Language :: Python :: 3.10', 'Programming Language :: Python :: 3.11', 'Programming Language :: Python :: 3.12', 'Programming Language :: Python :: 3.13', 'Topic :: Software Development :: Quality Assurance']
description = 'Sonar Scanner for the Python Ecosystem'
keywords = ['sonar', 'sonarqube', 'sonarcloud', 'cleancode']
license = 'LGPL-3.0-only'
name = 'pysonar'
readme = 'README.md'
version = "1.3.1"
dynamic = ["dependencies"]

[project.urls]
homepage = 'https://github.com/SonarSource/sonar-scanner-python'
repository = 'https://github.com/SonarSource/sonar-scanner-python'

[tool]
[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.coverage]
[tool.coverage.run]
branch = true
relative_files = true

[tool.poetry.dependencies]
python = '>=3.9'
tomli = '2.3.0'
requests = "2.32.5"
responses = "0.25.8"
pyfakefs = "5.9.3"
jproperties = "2.1.2"

[tool.poetry.group]
[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
black = "25.1.0"
coverage = "7.10.6"
licenseheaders = "0.8.8"
mypy = "1.15.0"
pytest = '8.4.2'
pytest-cov = '7.0.0'
pytest-subtests = "0.14.1"
pytest-docker = "3.2.0"
debugpy = "1.8.13"
types-requests = "2.32.0.20250328"

[[tool.poetry.packages]]
from = 'src'
include = 'pysonar_scanner'

[tool.poetry.scripts]
pysonar = 'pysonar_scanner.__main__:main'

[[tool.poetry.source]]
name = 'jfrog-server'
url = 'https://repox.jfrog.io/artifactory/api/pypi/sonarsource-pypi/simple'
priority = "primary"

[tool.pytest]
[tool.pytest.ini_options]
addopts = ['--import-mode=importlib', '--strict-markers']
pythonpath = ['src']
markers = [
    "its: marks tests as its"
]
log_cli = true
log_cli_level = "INFO"
