[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']

[project]
authors = [{ name="[Code Quality] Data & ML Squad", email="quality.data-ml@sonarsource.com" }]
classifiers = ['Environment :: Console', 'Intended Audience :: Developers', 'Operating System :: OS Independent', 'Programming Language :: Python', 'Programming Language :: Python :: 3', 'Programming Language :: Python :: 3 :: Only', 'Programming Language :: Python :: 3.9', 'Programming Language :: Python :: 3.10', 'Programming Language :: Python :: 3.11', 'Programming Language :: Python :: 3.12', 'Programming Language :: Python :: 3.13', 'Programming Language :: Python :: 3.14', 'Topic :: Software Development :: Quality Assurance']
description = 'Sonar Scanner for the Python Ecosystem'
keywords = ['sonar', 'sonarqube', 'sonarcloud', 'cleancode']
license = 'LGPL-3.0-only'
name = 'pysonar'
readme = 'README.md'
version = "1.8.0"
dynamic = ["dependencies"]

[project.urls]
homepage = 'https://github.com/SonarSource/sonar-scanner-python'
repository = 'https://github.com/SonarSource/sonar-scanner-python'

[tool]
[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.coverage]
[tool.coverage.run]
branch = true
relative_files = true

[tool.poetry.dependencies]
python = '>=3.10'
tomli = '>=2.0,<3'
requests = ">=2.32,<3"
jproperties = ">=2.1,<3"

[tool.poetry.group]
[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
responses = "0.26.1"
pyfakefs = "6.2.0"
black = "26.5.1"
coverage = "7.14.3"
licenseheaders = "0.8.8"
mypy = "2.1.0"
pytest = '9.1.1'
pytest-cov = '7.1.0'
pytest-subtests = "0.15.0"
pytest-docker = "3.2.5"
debugpy = "1.8.21"
types-requests = "2.33.0.20260518"

[[tool.poetry.packages]]
from = 'src'
include = 'pysonar_scanner'

[tool.poetry.scripts]
pysonar = 'pysonar_scanner.__main__:main'

[[tool.poetry.source]]
name = 'repox'
url = 'https://repox.jfrog.io/artifactory/api/pypi/sonarsource-pypi/simple'
priority = "primary"

[tool.pytest]
[tool.pytest.ini_options]
addopts = ['--import-mode=importlib', '--strict-markers']
pythonpath = ['src']
norecursedirs = ['tests/its/sources']
markers = [
    "its: marks tests as its"
]
log_cli = true
log_cli_level = "INFO"
